--- a/pages/Settings.xaml
+++ b/pages/Settings.xaml
@@ -16,10 +16,10 @@
             </StackPanel>
         </ToggleButton>
         <ToggleButton x:Name="toggleButton" HorizontalAlignment="Right" Margin="0,119,10,0" VerticalAlignment="Top" Height="40" Width="40" RenderTransformOrigin="0.07,0.49" Checked="coolChecked" Unchecked="coolUnchecked"/>
-        <ToggleButton HorizontalAlignment="Right" Margin="0,164,10,0" VerticalAlignment="Top" Height="40" Width="40"/>
+        <TextBox x:Name="BpmInput" HorizontalAlignment="Right" KeyUp="KeyUp" Background="White" Margin="0,164,10,0" VerticalAlignment="Top" Height="40" Width="80"/>
         <Label Content="Cool switch" Margin="10,74,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <Label Content="Cool switch" Margin="10,119,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <Label Content="Cool switch" Margin="10,164,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+        <Label Content="BPM" x:Name="setBpm" Margin="10,164,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <Label x:Name="coolLabel" Content="Label" HorizontalAlignment="Left" Margin="71.641,242.266,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Page>
