--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,7 +12,7 @@
         TextElement.FontWeight="Medium"
         TextElement.FontSize="48"
         FontSize="16"
-        FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#RobotoLight" MinWidth="900" MinHeight="600" MaxWidth="2560" MaxHeight="1440" HorizontalContentAlignment="Center"
+        FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#RobotoLight" MinWidth="950" MinHeight="630" MaxWidth="2560" MaxHeight="1440" HorizontalContentAlignment="Center"
         >
     
     
@@ -39,7 +39,7 @@
 
             </Grid.RowDefinitions>
 
-            <Frame x:Name="ContainerView" Grid.Row="1" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" NavigationUIVisibility="Hidden"></Frame>
+            <Frame x:Name="ContainerView" Grid.Row="1" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" NavigationUIVisibility="Hidden" Background="#FF1F1F1F"/>
 
         </Grid>
         
@@ -54,9 +54,9 @@
                 <ColumnDefinition Width="33.33"/>
 
             </Grid.ColumnDefinitions>
-            <Rectangle Fill="Transparent" Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="30" Stroke="Transparent" MinWidth="800" MouseDown="dragWindow"/>
+            <Rectangle Fill="Transparent" Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="30" Stroke="Transparent" MinWidth="800" MouseDown="dragWindow" MinHeight="30" Margin="0,0,0.024,0"/>
             <Image x:Name="closeButton" Grid.Column="3" Height="30" VerticalAlignment="Top" Source="img/close.png.png" MouseUp="closeUp" MouseEnter="closeEnter" MouseLeave="closeLeave" MouseDown="closeDown"/>
-            <Image x:Name="maximizeButton" Grid.Column="2" Height="30" VerticalAlignment="Top" Source="img/ic_open_in_new_white_48dp.png" MouseUp="maximizeUp" MouseDown="maximizeDown" MouseEnter="maximizeEnter" MouseLeave="maximizeLeave" Opacity="0.495"/>
+            <Image x:Name="maximizeButton" Grid.Column="2" Height="30" VerticalAlignment="Top" Source="img/ic_open_in_new_white_48dp.png" MouseUp="maximizeUp" MouseDown="maximizeDown" MouseEnter="maximizeEnter" MouseLeave="maximizeLeave" Opacity="0.5"/>
             <Image x:Name="minimizeButton" Grid.Column="1" Height="30" VerticalAlignment="Top" Source="img/ic_remove_white_48dp.png" MouseUp="minimizeUp" Opacity="0.5" MouseEnter="minimizeEnter" MouseDown="minimizeDown" MouseLeave="minimizeLeave"/>
 
 
