Fixed album placeholder

--- a/pages/PlayerControl.xaml
+++ b/pages/PlayerControl.xaml
@@ -7,22 +7,23 @@
       mc:Ignorable="d"
       Title="PlayerControl" MinHeight="100" MinWidth="900">
 
-    <Grid Background="#FF1F1F1F" Height="100" MinHeight="100">
+    <Grid Grid.Column="0" Background="#FF1F1F1F" Height="100" MinHeight="100">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="91*"/>
+            <ColumnDefinition Width="20"/>
             <ColumnDefinition Width="118*"/>
+            <ColumnDefinition Width="20"/>
+
             <ColumnDefinition Width="91*"/>
         </Grid.ColumnDefinitions>
-        <Label x:Name="ArtistLabel" Content="Vicetone" Margin="100.048,35.5,0,38.638" VerticalAlignment="Center" FontWeight="Normal" Height="25.862" HorizontalAlignment="Left" Width="266.952" Opacity="0.8" ToolTip="Artist" Grid.ColumnSpan="2"/>
-        <Label x:Name="BpmLabel" Content="132" HorizontalAlignment="Left" Margin="100.048,0,0,10" VerticalAlignment="Bottom" Width="95.1" FontSize="20" Height="35.138" ToolTip="Beats Per Minute"/>
-        <ScrollViewer x:Name="TitleScrollView" Margin="104.736,10,0,54.55" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" HorizontalAlignment="Left" Width="118" ToolTip="Title">
-            <TextBlock x:Name="TitleLabel" FontWeight="Bold" FontSize="18" Foreground="White" Padding="0">
-        Way Back (feat. Cozi Zuehlsdorff)
-            </TextBlock>
+        <Label x:Name="ArtistLabel" Content="" Margin="100,36,0,39" VerticalAlignment="Center" FontWeight="Normal" Height="30" HorizontalAlignment="Left" MinWidth="123" Opacity="0.8" ToolTip="Artist" Background="{x:Null}"/>
+        <Label x:Name="BpmLabel" Content="" HorizontalAlignment="Left" Margin="100.048,0,0,10" VerticalAlignment="Bottom" Width="95.1" FontSize="20" Height="35.138" ToolTip="Beats Per Minute" Background="{x:Null}"/>
+        <ScrollViewer x:Name="TitleScrollView" Margin="104.736,10,0,54.55" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" HorizontalAlignment="Left" MinWidth="118" ToolTip="Title">
+            <TextBlock x:Name="TitleLabel" Text="" FontWeight="Bold" FontSize="18" Foreground="White" Padding="0"/>
         </ScrollViewer>
         <!--<TextBlock x:Name="TitleLabel" Content="Way Back" HorizontalAlignment="Left" Margin="100.048,9.577,0,0" VerticalAlignment="Top" FontWeight="Bold" Width="122.608" FontSize="18" Height="34"/>-->
-        <Grid Grid.Column="1">
-            <Slider x:Name="trackSlider" Margin="10,0,10,12.673" RenderTransformOrigin="0.5,0.5" Height="20.917" VerticalAlignment="Bottom" MinHeight="20" ValueChanged="trackSlider_ValueChanged" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" Maximum="204" MouseDown="trackSlider_MouseDown"/>
+        <Grid Grid.Column="2">
+            <Slider x:Name="trackSlider" Margin="10,0,10,12.673" Value="0" Thumb.DragDelta="Draging" Thumb.DragCompleted="EndDraging" Thumb.DragStarted="StartDraging"  DataContext=""  RenderTransformOrigin="0.5,0.5" Height="20.917" VerticalAlignment="Bottom" MinHeight="20" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" Maximum="204" />
             <Grid Height="54.749" Margin="0,10,0,0" Width="220" VerticalAlignment="Top" HorizontalAlignment="Center">
 
                 <Image x:Name="playButton" Source="../img/play-white.png" MouseUp="playButtonUp" UseLayoutRounding="True" Margin="67,0,63.334,-0.251" Opacity="0.75">
@@ -149,9 +150,9 @@
             <Label x:Name="SongDurationLabel" Content="0:00" HorizontalAlignment="Right" Margin="0,0,10,38.59" FontWeight="Normal" Width="38.517" HorizontalContentAlignment="Right" VerticalContentAlignment="Bottom" Opacity="0.8"/>
             <Label x:Name="SongCurrentTime" Content="0:00" HorizontalAlignment="Left" Margin="10,0,0,38.59" FontWeight="Normal" Width="45.184" VerticalContentAlignment="Bottom" Opacity="0.8"/>
         </Grid>
-        <MediaElement x:Name="Player" HorizontalAlignment="Left" Height="80" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" ScrubbingEnabled="True" MediaOpened="Player_MediaOpened" Volume="0.7" LoadedBehavior="Manual"/>
-        <Image x:Name="AlbumArt" Margin="10,10,183,10" Source="WayBackVicetone.jpg" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Slider x:Name="VolumeSlider" Grid.Column="2" HorizontalAlignment="Left" Margin="86,35.45,0,0" VerticalAlignment="Top" Width="100" ValueChanged="VolumeSlider_ValueChanged" Maximum="1" Value="0.7" Opacity="0.8" LargeChange="0.1" SmallChange="0.01" TickFrequency="0.01"/>
-        <Image x:Name="VolumeButton" Grid.Column="2" Height="18" Margin="63,36,192,46" Width="18" Source="volume-high.png" Opacity="0.795" UseLayoutRounding="True" ClipToBounds="True" SnapsToDevicePixels="True" HorizontalAlignment="Left"/>
+        <MediaElement x:Name="Player" HorizontalAlignment="Left" Height="80" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" ScrubbingEnabled="True" MediaEnded="Player_MediaEnded" MediaOpened="Player_MediaOpened" Volume="0.7" LoadedBehavior="Manual"/>
+        <Image x:Name="AlbumArt" Margin="10,10,183,10" Source="album_placeholder.png" MinWidth="80" MinHeight="80" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+        <Slider x:Name="VolumeSlider" Grid.Column="4" HorizontalAlignment="Center" Margin="85.544,43,87.096,39" VerticalAlignment="Center" Width="100" ValueChanged="VolumeSlider_ValueChanged" Maximum="1" Value="0.7" Opacity="0.8" LargeChange="0.1" SmallChange="0.01" TickFrequency="0.01"/>
+        <Image x:Name="VolumeButton" Grid.Column="4" Height="18" Margin="62.544,43,0,39" Width="18" Source="volume-high.png" Opacity="0.795" UseLayoutRounding="True" ClipToBounds="True" SnapsToDevicePixels="True" HorizontalAlignment="Left"/>
     </Grid>
 </Page>
