--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -54,6 +54,7 @@
                 <ColumnDefinition Width="33.33"/>
 
             </Grid.ColumnDefinitions>
+            <Image HorizontalAlignment="Left" Height="32" VerticalAlignment="Top" Width="32" Source="img/stuffa-logo.gif"/>
             <Rectangle Fill="Transparent" Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="30" Stroke="Transparent" MinWidth="800" MouseDown="dragWindow" MinHeight="30" Margin="0,0,0.024,0"/>
             <Image x:Name="closeButton" Grid.Column="3" Height="30" VerticalAlignment="Top" Source="img/close.png.png" MouseUp="closeUp" MouseEnter="closeEnter" MouseLeave="closeLeave" MouseDown="closeDown"/>
             <Image x:Name="maximizeButton" Grid.Column="2" Height="30" VerticalAlignment="Top" Source="img/ic_open_in_new_white_48dp.png" MouseUp="maximizeUp" MouseDown="maximizeDown" MouseEnter="maximizeEnter" MouseLeave="maximizeLeave" Opacity="0.5"/>
